<resources>
    <string name="app_name">Birthday</string>
    <string name="login">Login</string>
    <string name="enter_login_id">Enter login id</string>
    <string name="enter_password">Enter password</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="birthdays">Birthdays</string>
    <string name="birthday_list">Birthday List</string>
    <string name="add_birthday">Add Birthday</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_dob">Enter DOB(DD/MM/YYYY)</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_success">Signed up successfully</string>
    <string name="birthday_added_successfully">Birthday added successfully</string>

    <string name="enter_loginid_password">Enter login-id and password!</string>
    <string name="set_profile_photo">Set profile photo</string>
    <string name="person_detail">Person Detail</string>
    <string name="no_internet_connectivity">No Internet Connectivity</string>
</resources>