<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.birthday.kotlin.ui.auth.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_navigation_birthday_list"
            app:destination="@id/navigation_birthday_list"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_birthday_list"
        android:name="com.birthday.kotlin.ui.birthdaylist.BirthdayListFragment"
        android:label="@string/birthday_list"
        tools:layout="@layout/fragment_birthday_list" />

    <fragment
        android:id="@+id/navigation_add_birthday"
        android:name="com.birthday.kotlin.ui.add.AddBirthdayFragment"
        android:label="@string/add_birthday"
        tools:layout="@layout/fragment_add_birthday" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.birthday.kotlin.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>