<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.birthday.kotlin.ui.add.AddBirthdayViewModel" />

        <variable
            name="name"
            type="String" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.add.AddBirthdayFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_til"
                style="@style/CustomTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/enter_name"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onNameTextChanged(text)}"
                    android:text="@{viewModel.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_til"
                style="@style/CustomTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/enter_email"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onEmailTextChanged(text)}"
                    android:text="@{viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_til"
                style="@style/CustomTextInputLayout"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_et"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/enter_phone"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onPhoneTextChanged(text)}"
                    android:text="@{viewModel.phone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dob_til"
                style="@style/CustomTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob_et"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/enter_dob"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onDOBTextChanged(text)}"
                    android:text="@{viewModel.dob}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_birthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dob_til" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.temp}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>

